--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <h2>Adults Only</h2>
                 <a href="https://x.com/MeepsKittenAD" data-link="https://x.com/MeepsKittenAD" class="button adult-link"><span class="main-text">After Dark X (18+ only)</span> <span class="subtitle">NSFW (Twitter)</span></a>
                 <a href="https://bsky.app/profile/meeps.porn" data-link="https://bsky.app/profile/meeps.porn" class="button adult-link"><span class="main-text">Bluesky After Dark (18+ Only)</span> <span class="subtitle">NSFW</span></a>
-                <a href="https://x.com/MeepsKittenAD/status/1789958878282580087?t=BbegCujQtluzsp-cAgEY6g&s=191789958878282580087" data-link="https://x.com/MeepsKittenAD/status/1789958878282580087?t=BbegCujQtluzsp-cAgEY6g&s=191789958878282580087" class="button adult-link"><span class="main-text">Daki Showcase</span> <span class="subtitle">Showcase of my Daki</span></a>
-                <a href="https://pastebin.com/raw/Nw67hBKS" data-link="https://pastebin.com/raw/Nw67hBKS" class="button adult-link"><span class="main-text">Daki Purchase Links</span> <span class="subtitle">A list of where to buy the body pillows I have</span></a>
+                <a href="https://x.com/MeepsKittenAD/status/1789958878282580087?t=BbegCujQtluzsp-cAgEY6g&s=191789958878282580087" data-link="https://x.com/MeepsKittenAD/status/1789958878282580087?t=BbegCujQtluzsp-cAgEY6g&s=191789958878282580087" data-note="You need to be logged into your X account to view this content, otherwise it will say the post is unavailable." class="button adult-link"><span class="main-text">Daki Showcase</span> <span class="subtitle">Showcase of my Daki</span></a>
+                <a href="https://meeps.tv" data-link="https://meeps.tv" data-title="My Dakis" data-note="<a href='https://www.braeburned.com/product/olli-daki-18' target='_blank' class='modal-button'>Buy Olli Daki</a><br><a href='https://www.agentink.store/products/corgi-dakimakura' target='_blank' class='modal-button'>Buy CorgiCam Daki</a><br><a href='https://bad-dragon.com/products/dakimakura' target='_blank' class='modal-button'>Buy Duke & Janine Daki</a><br><br>Daki's not listed are sold out or discontinued D:" class="button"><span class="main-text">Daki Purchase Links</span> <span class="subtitle">A list of where to buy the body pillows I have</span></a>
             </section>
         </main>
         <footer>
@@ -54,6 +54,15 @@
             <p>Are you 18 years or older?</p>
             <button id="yes-button" class="button">Yes</button>
             <button id="no-button" class="button">No</button>
+        </div>
+    </div>
+
+    <!-- Notes Modal -->
+    <div id="notes-modal" class="modal">
+        <div class="modal-content">
+            <h2 id="note-title">Note</h2>
+            <p id="note-text">This is a note about the link.</p>
+            <button id="note-ok-button" class="button">Okay :3</button>
         </div>
     </div>
 
