--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="https://twitch.tv/MeepsKitten" target="_blank" class="button"><span class="main-text">Twitch</span> <span class="subtitle">Check out my streams here</span></a>
                 <a href="https://tiktok.com/@astronautmeeps" target="_blank" class="button"><span class="main-text">TikTok</span> <span class="subtitle">Watch highlights and tidbits on TikTok</span></a>
                 <a href="https://youtube.com/c/MeepsKitten" target="_blank" class="button"><span class="main-text">YouTube</span> <span class="subtitle">Subscribe to my channel</span></a>
+                <a href="https://youtube.com/@AstronautMeeps" target="_blank" class="button"><span class="main-text">VOD Archive</span> <span class="subtitle">Subscribe to my VOD channel</span></a>       
             </section>
             <section>
                 <h2>Social</h2>
