feat: Add new section for "Happening Soon" with countdowns and links

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <div class="container">
-        <!-- New Section for Happening Soon -->
+        <!-- New Section for Happening Soon
         <section class="happening-soon">
             <h2>Happening Soon</h2>
             <a href="https://www.twitch.tv/meepskitten/schedule?segmentID=9255fdef-9a8d-470e-ae25-32b2f4434e0e" target="_blank" class="button">
                 <span class="main-text">12 Hour Hardcore Stream</span>
                 <span class="subtitle">Twitch front page special event</span>
             </a>
-            <div id="countdown" class="countdown">loading</div> <!-- Countdown element -->
-            <!-- New Countdown for Anniversary Video -->
+            <div id="countdown" class="countdown">loading</div> 
             <a href="https://www.youtube.com/watch?v=IbmyqUobIsA" target="_blank" class="button">
                 <span class="main-text">Anniversary Video</span>
                 <span class="subtitle">My breakdown video on my surprise redebut</span>
             </a>
-            <div id="countdown-anniversary" class="countdown">loading</div> <!-- New Countdown element -->
+            <div id="countdown-anniversary" class="countdown">loading</div> 
         </section>
+        -->
         <header>
             <img src="pfp.webp" alt="Profile Picture" class="profile-picture">
             <h1>Meeps' Links</h1>
