feat: Add link to editor in social section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <a href="https://twitch.tv/MeepsKitten" target="_blank" class="button"><span class="main-text">Twitch</span> <span class="subtitle">Check out my streams here</span></a>
                 <a href="https://tiktok.com/@astronautmeeps" target="_blank" class="button"><span class="main-text">TikTok</span> <span class="subtitle">Watch highlights and tidbits on TikTok</span></a>
                 <a href="https://youtube.com/c/MeepsKitten" target="_blank" class="button"><span class="main-text">YouTube</span> <span class="subtitle">Subscribe to my channel</span></a>
-                <a href="https://youtube.com/@AstronautMeeps" target="_blank" class="button"><span class="main-text">VOD Archive</span> <span class="subtitle">Subscribe to my VOD channel</span></a>       
+                <a href="https://youtube.com/@AstronautMeeps" target="_blank" class="button"><span class="main-text">VOD Archive</span> <span class="subtitle">Subscribe to my VOD channel</span></a>
+                <a href="https://ytjobs.co/talent/profile/209055?r=494" target="_blank" class="button"><span class="main-text">My Editor</span> <span class="subtitle">They edit my shorts!</span></a>       
             </section>
             <section>
                 <h2>Social</h2>
