--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="section-content" id="adults-content">
                     <a href="https://x.com/MeepsNaked" data-link="https://x.com/MeepsNaked" class="button adult-link"><span class="main-text">After Dark X (18+ only)</span> <span class="subtitle">NSFW (Twitter)</span></a>
                     <a href="https://bsky.app/profile/meeps.porn" data-link="https://bsky.app/profile/meeps.porn" class="button adult-link"><span class="main-text">Bluesky After Dark (18+ Only)</span> <span class="subtitle">NSFW</span></a>
+                    <a href="https://t.me/meepsnaked" data-link="https://t.me/meepsnaked" target="_blank" class="button adult-link"><span class="main-text">Telegram Channel (18+ Only)</span> <span class="subtitle">NSFW</span></a>
                     <a href="https://seraphictiger.com/collections/meepskitten" data-link="https://seraphictiger.com/collections/meepskitten" target="_blank" class="button adult-link"><span class="main-text">NSFW Prints</span> <span class="subtitle">Use code 'stinkycat' for 10% off</span></a>
                 </div>
             </section>
