Add link to "throne*" in adult section of index.html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <a href="https://bsky.app/profile/meeps.porn" data-link="https://bsky.app/profile/meeps.porn" class="button adult-link"><span class="main-text">Bluesky After Dark (18+ Only)</span> <span class="subtitle">NSFW</span></a>
                     <a href="https://t.me/meepsnaked" data-link="https://t.me/meepsnaked" target="_blank" class="button adult-link"><span class="main-text">Telegram Channel (18+ Only)</span> <span class="subtitle">NSFW</span></a>
                     <a href="https://seraphictiger.com/collections/meepskitten" data-link="https://seraphictiger.com/collections/meepskitten" target="_blank" class="button adult-link"><span class="main-text">NSFW Prints</span> <span class="subtitle">Use code 'stinkycat' for 10% off</span></a>
+                    <a href="https://chair.zonked.tv/meeps/" data-link="https://chair.zonked.tv/meeps/" target="_blank" class="button adult-link"><span class="main-text">"throne*"</span> <span class="subtitle">*but you dont pay anything</span></a>
                 </div>
             </section>
             <section class="dropdown-section credits-section">
