--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <a href="https://x.com/MeepsKitten" target="_blank" class="button"><span class="main-text">Twitter (aka X)</span> <span class="subtitle">Follow me on Twitter</span></a>
                     <a href="https://discord.gg/5BAv8BcFmz" target="_blank" class="button"><span class="main-text">Discord</span> <span class="subtitle">Join my Discord server</span></a>
                     <a href="https://bsky.app/profile/meeps.tv" target="_blank" class="button"><span class="main-text">Bluesky</span> <span class="subtitle">Connect with me on Bluesky</span></a>
+                    <a href="https://www.instagram.com/meepskitten/" target="_blank" class="button"><span class="main-text">Instagram</span> <span class="subtitle">Follow me on Instagram</span></a>
                 </div>
             </section>
             <section class="dropdown-section">
@@ -94,6 +95,7 @@
                 <a href="https://youtube.com/c/MeepsKitten" target="_blank"><i class="fab fa-youtube"></i></a>
                 <a href="https://x.com/MeepsKitten" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://discord.gg/5BAv8BcFmz" target="_blank"><i class="fab fa-discord"></i></a>
+                <a href="https://www.instagram.com/meepskitten/" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
         </footer>
     </div>
