Update "Happening Soon" section in index.html to reflect new event: Foot Rub Application with revised call-to-action.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <section class="happening-soon">
-            <h2>Happening Soon</h2>
+            <h2>Now Occurring</h2>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdLrsQetWh_Cjd789KPRcYDt43lncPLV1K0Qr1hNTNrB2XaZw/viewform?usp=sharing&ouid=115000672118566448093" target="_blank" class="button">
-                <span class="main-text">Event</span>
-                <span class="subtitle">Click here to learn more</span>
+                <span class="main-text">Foot Rub Application</span>
+                <span class="subtitle">Click here to apply</span>
             </a>
             <div id="countdown" class="countdown">loading</div> 
         </section>
