Update link in foot rub application section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <section class="happening-soon">
             <h2>Now Occurring</h2>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdLrsQetWh_Cjd789KPRcYDt43lncPLV1K0Qr1hNTNrB2XaZw/viewform?usp=sharing&ouid=115000672118566448093" target="_blank" class="button">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdLrsQetWh_Cjd789KPRcYDt43lncPLV1K0Qr1hNTNrB2XaZw/viewform" target="_blank" class="button">
                 <span class="main-text">Foot Rub Application</span>
                 <span class="subtitle">Click here to apply</span>
             </a>
